# f1-sql-updater

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  run_sql_updater.yml
src/: macros.rs  main.rs  models.rs  tables.rs
