[package]
name = "f1-sql-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-query = { version = "0.30.7", default-features = false, features = [
    "backend-mysql",
    "derive",
] }
anyhow = "1.0.86"
mysql = "25.0.1"
chrono = "0.4.38"
serde = "1.0.203"
csv = "1.3.0"
log = "0.4.22"
simple_logger = { version = "5.0.0", features = ["timestamps"] }
